<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back"
    tools:context=".activities.LanguageActivity">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@color/statusbarcolor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appforground"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:srcCompat="@drawable/splashnavlogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnhindiStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:padding="15dp"
        android:text="@string/hindistatus"
        android:textColor="@color/halfblack"
        android:theme="@style/Theme.EnglishPoetry.ButtonRippleLangAct"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnenglishStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnenglishStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/alike_angular"
        android:padding="15dp"
        android:text="@string/englishstatus"
        android:textColor="@color/halfblack"
        android:theme="@style/Theme.EnglishPoetry.ButtonRippleLangAct"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/idprivacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/alike_angular"
        android:gravity="center"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:text="@string/statuslangtitle"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnhindiStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idprivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:text="@string/privacyPolicytext"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/appnametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/appforground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintVertical_bias="0.279" />

</androidx.constraintlayout.widget.ConstraintLayout>